# orkg-abstracts

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  update.py
data/: changelog.txt  orkg_papers.csv  orkg_papers_crossref.csv  orkg_papers_no_record.csv
services/: __init__.py  crossref.py  metadata.py  oai.py  rdf.py  semanticscholar.py
src/: __init__.py  update.py
src/services/: __init__.py  _base.py  crossref.py  metadata.py  rdf.py  semanticscholar.py
